app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\development\tools\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\development\tools\kompose.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/eventshuffle-network: "true"
        io.kompose.service: app
    spec:
      containers:
        - env:
            - name: DB
              valueFrom:
                configMapKeyRef:
                  key: DB
                  name: env
            - name: DB_PORT
              valueFrom:
                configMapKeyRef:
                  key: DB_PORT
                  name: env
            - name: SPRING_DATASOURCE_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: db-secret
                  key: DB_PASSWORD
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://172.17.0.7:5432/postgres
            - name: SPRING_DATASOURCE_USERNAME
              valueFrom:
                secretKeyRef:
                  name: db-secret
                  key: DB_USERNAME
          image: happosade/eventshuffle
          name: eventshuffle-backend
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
